# Inference_Accelerator

./: .gitignore
Perf_Model/: instr.txt  mem_init.txt  npu.py  test_script.py
rtl/: Addition32Bit.v  CompareAndShift32Bit.v  Multiplication32bit.v  Normalization32Bit.v  PE.v  PE_tb.v  RELU6.v  adder_32bit.v  multiplier_32bit.v
software/: CMakeLists.txt  TODO.txt  compiler.hpp  importer.cpp  importer.hpp  list_ops.out  mobilenet_layers.csv  model.py  model_getinfo.py  neural_net.cpp  neural_net.h  onnx.proto  parse_onnx.py  pyImporter.py  pyRun.py  sources.txt
software/include/: chevan_utils_array.h  chevan_utils_min.h  utils.hpp
